--- a/src/app/Features/home/Components/hero-section/hero-section.css
+++ b/src/app/Features/home/Components/hero-section/hero-section.css
@@ -9,7 +9,7 @@ body{
 .hero-section {
     position: relative;
     height: 100vh;
-    background: url('/Images/hero.jpeg') no-repeat center center/cover;
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     display: flex;
     align-items: center;
     justify-content: flex-start;
